--- a/style.css
+++ b/style.css
@@ -1,1 +1,69 @@
+@import url(https://fonts.google.com/specimen/Rakkas&#39;);
 
+/* Variáveis */
+:root {
+    --primary-color: #2c2094;
+    --secondary-color: #eff1f1;
+    --text-color: #000203fb; /* MUDA A COR DAS LETRAS */
+    --background-color: #38be2c;       /* MUDA A COR DO FUNDO */
+    --button-hover: #dd1fa4;
+    --font-body: "Chocolate Classical Sans", serif;
+    --font-titulo: "Rakkas", serif;
+}
+header {
+    text-align: center;
+}
+img {
+    width: 1000px;
+    height: auto; /* Mantém a proporção */
+    display: block;
+    margin: auto;
+    padding: 10px;
+  }
+/* Reset */
+* {
+    margin: 10px;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: var(--font-body);
+}
+
+/* Corpo da página */
+body {
+    background-color: var(--background-color);
+    color: var(--text-color);
+    line-height: 1.6;
+}
+
+h3 {
+    margin-top: 25px;
+}
+
+p {
+    margin-top: 20px;
+}
+
+img {
+    max-width: 90%;
+}
+
+/* Responsividade */
+@media (max-width: 768px) {
+    .conteudo {
+        width: 90%;
+    }
+
+    nav ul {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    nav ul li {
+        margin: 5px 0;
+    }
+
+    .cta-button {
+        width: 100%;
+    }
+}
